mv to new folder

--- a/notebooks/simple_demo.ipynb
+++ b/notebooks/simple_demo.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "5bc094a2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('..')\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy\n",
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "76d1c7bc",
    "metadata": {},
    "outputs": [],
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "6ede10da",
    "metadata": {},
    "outputs": [],
@@ -78,18 +80,22 @@
     "# For plots\n",
     "x, y = np.linspace(0, 1, 50), np.linspace(0, 1, 50)\n",
     "(XY, (xmg, ymg)) = tools.pairify((x, y))\n",
+    "\n",
+    "xsmall, ysmall = np.linspace(0, 1, 4), np.linspace(0, 1, 4)\n",
+    "(XYsmall, (xmgsmall, ymgsmall)) = tools.pairify((xsmall, ysmall))\n",
+    "\n",
     "xl, yl = np.linspace(0, 1, 500), np.linspace(0, 1, 500)\n",
     "(XYl, (xmgl, ymgl)) = tools.pairify((xl, yl))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "b8e6571c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "branin = initialize_branin()"
+    "branin = initialize_branin(6)"
    ]
   },
   {
@@ -580,8 +586,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0a786824",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "96"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import multiprocessing\n",
+    "\n",
+    "multiprocessing.cpu_count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "20066947",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.04957287, 0.05485353, 0.05646105, 0.05085427, 0.0517465 ,\n",
+       "       0.05799316, 0.05651901, 0.05456026, 0.05613937, 0.06352187,\n",
+       "       0.05519248, 0.05580612, 0.04413959, 0.04462378, 0.06448256,\n",
+       "       0.06522243])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy\n",
+    "alpha=1.0\n",
+    "beta=0.0\n",
+    "\n",
+    "def function_(arg):\n",
+    "    m, va = arg.predict_GPdelta(integration_points, alpha=alpha, beta=beta)\n",
+    "    return va\n",
+    "integration_points = pyDOE.lhs(2, 50, criterion=\"maximin\", iterations=50)\n",
+    "\n",
+    "def augmented_design(arg, X, args, verbose=False):\n",
+    "    if isinstance(arg, tuple):\n",
+    "        m, s = arg\n",
+    "    else:\n",
+    "        m, s = arg.predict(X, return_std=True)\n",
+    "    scenarios = lambda mp, sp: scipy.stats.norm.ppf(\n",
+    "            np.linspace(0.05, 0.95, 5, endpoint=True), loc=mp, scale=sp\n",
+    "        )\n",
+    "    augmented_meas = np.empty(len(m))\n",
+    "    for j, (m_, s_) in enumerate(zip(m, s)):\n",
+    "        augmented_sc = np.empty(5)\n",
+    "        for i, zi in enumerate(scenarios(m_, s_)):\n",
+    "            aug_gp = arg.augmented_GP(X[j], zi)\n",
+    "            augmented_sc[i] = function_(aug_gp).mean()\n",
+    "        augmented_meas[j] = augmented_sc.mean()\n",
+    "    return augmented_meas\n",
+    "\n",
+    "augmented_design(branin, XYsmall, [])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "652d0e39",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 25\u001b[0m\n\u001b[1;32m     21\u001b[0m     branin\u001b[39m.\u001b[39mset_idxU([\u001b[39m1\u001b[39m], ndim\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[1;32m     22\u001b[0m     \u001b[39mreturn\u001b[39;00m branin\n\u001b[0;32m---> 25\u001b[0m bounds \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray([[\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m], [\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m]])\n\u001b[1;32m     26\u001b[0m \u001b[39m# For plots\u001b[39;00m\n\u001b[1;32m     27\u001b[0m x, y \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mlinspace(\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m50\u001b[39m), np\u001b[39m.\u001b[39mlinspace(\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m50\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97556f5b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -603,7 +704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
